# ros_web_video

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  mainpage.dox  manifest.xml  package.xml
html/: webgl_kinect.html  webgl_pointcloud_streaming.html
include/: connection.h  encoder_manager.h  ffmpeg_encoder.h  ffmpeg_wrapper.h  header.h  image_subscriber.h  reply.h  request.h  request_parser.h  server.h  server_configuration.h
src/: connection.cpp  ffmpeg_encoder.cpp  ffmpeg_wrapper.cpp  image_subscriber.cpp  main.cpp  reply.cpp  request_parser.cpp  server.cpp  topic_streamer.cpp
tools/: depth_to_webGL_pointclouds.cpp
www/: webgl_kinect-backup.html  webgl_pointcloud_streaming.html
www/js/: depthcloud.js  depthcloud_fs.shader  depthcloud_vs.shader
