<package>
  <name>ros_http_video_streamer</name>  
  <version>0.1.2</version>
  <description>
    This package encodes ROS image topics via ffmpeg and provides a video stream via http
    
  </description>
  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>bzip2</build_depend>  
  <build_depend>image_transport</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yasm</build_depend>
  <build_depend>zlib</build_depend>

  <run_depend>bzip2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>mk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>zlib</run_depend>
</package>
