<package>
  <name>ros_web_video</name>  
  <version>0.1.14</version>
  <description>Streaming of ROS Image Topics via HTTP</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="jkammerl@willowgarage.com">Julius Kammer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ros_web_video</url>
  <url type="bugtracker">https://github.com/RobotWebTools/ros_web_video/issues</url>
  <url type="repository">https://github.com/RobotWebTools/ros_web_video</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>bzip2</build_depend>  
  <build_depend>image_transport</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yasm</build_depend>
  <build_depend>zlib</build_depend>
  <build_depend>git</build_depend>

  <run_depend>bzip2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>mk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>zlib</run_depend>
</package>
